<resources>
    <string name="app_name">coffee shop</string>
    <string name="coffee_house">Coffee\n<font color="#F1953e">H</font>ouse</string>
    <string name="get_started">Get started</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign up</string>
    <string name="authorization">Authorization</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat password</string>
    <string name="coffee_house2">Coffee <font color="#F1953e">H</font>ouse</string>
    <string name="search_anything">Search anything</string>
    <string name="title">title</string>
    <string name="email">Email</string>
    <string name="category">Category</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="title2">Title</string>
    <string name="special_for_you">Special for you</string>
    <string name="list">List</string>
    <string name="back">back</string>
    <string name="description">Description</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="buy_now">Buy now</string>
    <string name="price">Price</string>
    <string name="_0">$0</string>
    <string name="my_cart">My Cart</string>
</resources>